# uifw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  main.cpp
res/fonts/: generate_msdf_font_atlases.sh
res/fonts/_generated/: JetBrainsMono.json -range 4  Roboto.json -range 4
res/shaders/: batch_render.frag.hlsl  batch_render.vert.hlsl  batch_render_font.frag.hlsl  batch_render_font.vert.hlsl  sdf_inc.hlsl  triangle.fs  triangle.vs
res/test-data/: t8.shakespeare.txt
sample/01-demo/: CMakeLists.txt  main.c
src/: CMakeLists.txt
src/UI/Canvas/: Canvas.cpp  Canvas.hpp
src/UI/Core/: Application.cpp  Application.hpp
src/UI/ECS/Components/: BaseComponent.hpp  FontComponents.hpp  InputComponents.hpp  RenderingComponents.hpp  StyleComponents.hpp
src/UI/ECS/ECSRoot/: ECSRoot.hpp
src/UI/ECS/Entity/: Entity.cpp  Entity.hpp
src/UI/GFX/: Shader.cpp  Shader.hpp
src/UI/GFX/Renderer/: Renderer.cpp  Renderer.hpp  RendererTypes.hpp
src/UI/GFX/Renderer/Text/: TextHelpers.cpp  TextRendererHelpers.cpp  TextRendererHelpers.hpp
src/UI/IO/Image/: Image.cpp
src/UI/IO/Input/: Input.cpp  Input.hpp  InputHelpers.cpp  InputHelpers.hpp
src/UI/IO/Text/: FontLoader.cpp  FontLoader.hpp
src/UI/Layout/: LayoutHelpers.cpp  LayoutHelpers.hpp  LayoutTypes.hpp
src/UI/Utils/: FileUtils.hpp  MathUtils.hpp  StringUtils.hpp
src/UI/Widgets/Text/: InputField.cpp  InputField.hpp  ScrollArea.cpp  ScrollArea.hpp
src/UI/Window/: Window.cpp  Window.hpp
src/uifw/: uifw.h
src/uifw/Core/: Application.c  Application.h  Coordinates.h  System.h  Types.h
src/uifw/Core/Containers/: Queue.c  Queue.h
src/uifw/Core/Utils/: Defs.h  Log.h  Time.h
src/uifw/ECS/: Components.h  Entity.c  Entity.h  World.h
src/uifw/GFX/: GFX.c  GFX.h  Shader.c  Shader.h
src/uifw/GFX/Renderer/: Renderer.c  RendererHelpers.c  RendererHelpers.h  RendererTypes.h
src/uifw/Platform/: Input.c  Input.h  Window.c  Window.h
src/uifw/UI/Canvas/: Canvas.c  Canvas.h
src/uifw/UI/Layout/: Layout.c  Layout.h
tests/: CMakeLists.txt  test_main.cpp
tests/ECS/: CanvasTest.hpp  ECSTest.hpp
tests/Utils/: StringUtilsTests.hpp
